Fixed layout bug

--- a/Frontend/car-market-app/src/components/Main/Vehicles/Vehicles.scss
+++ b/Frontend/car-market-app/src/components/Main/Vehicles/Vehicles.scss
@@ -49,7 +49,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    .locationDialogField{
+
+    .splitDialogField{
         width: 48%;
     }
 }
